--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,3 +4,7 @@ services:
     build: ./server
     ports:
       - "8080:8080"
+  mobile:
+    build: ./client/mobile
+    ports:
+      - "8081:8081"
