--- a/client/web/package.json
+++ b/client/web/package.json
@@ -13,6 +13,8 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.11",
     "autoprefixer": "^10.4.16",
+    "classnames": "^2.3.2",
+    "keycloak-js": "^22.0.3",
     "next": "13.5.3",
     "postcss": "^8.4.30",
     "react": "18.2.0",
