--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,13 +4,16 @@ services:
     build: ./server
     ports:
       - "8080:8080"
-    volumes:
-      - shared_cli_volume:/shared_data
 
   mobile: 
     build: ./client/mobile
+    volumes:
+      - shared_cli_volume:/shared_data
+    
+  web:
+    build: ./client/web
     ports:
-      - "8081:8081"
+      - "3000:3000"
     volumes:
       - shared_cli_volume:/shared_data
 
