--- a/client/mobile/package.json
+++ b/client/mobile/package.json
@@ -10,10 +10,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/viewpager": "^5.0.11",
+    "@react-navigation/native": "^6.1.8",
+    "@react-navigation/stack": "^6.3.18",
     "react": "18.2.0",
     "react-native": "0.72.5",
+    "react-native-gesture-handler": "^2.13.1",
     "react-native-paper": "^5.10.6",
-    "react-native-safe-area-context": "^4.7.2"
+    "react-native-reanimated": "^3.5.4",
+    "react-native-safe-area-context": "^4.7.2",
+    "react-native-screens": "^3.25.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
