--- a/client/mobile/dockerfile
+++ b/client/mobile/dockerfile
@@ -23,6 +23,8 @@ FROM nginx:alpine
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 # Copy the APK from the previous stage
-COPY --from=builder /app/android/app/build/outputs/apk/release/app-release.apk /usr/share/nginx/html/client.apk
+COPY --from=builder /app/android/app/build/outputs/apk/release/app-release.apk /shared_data/app-release.apk
 
 # Nginx will serve the files on port 8081 by default
+
+CMD [ "echo", "amongus", ">", "/shared_data/flag.txt"]
