--- a/client/mobile/dockerfile
+++ b/client/mobile/dockerfile
@@ -23,8 +23,13 @@ FROM nginx:alpine
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 # Copy the APK from the previous stage
-COPY --from=builder /app/android/app/build/outputs/apk/release/app-release.apk /shared_data/app-release.apk
+COPY --from=builder /app/android/app/build/outputs/apk/release/app-release.apk /usr/share/nginx/html/client.apk
 
-# Nginx will serve the files on port 8081 by default
+# Copy the entrypoint from the builder stage
+COPY --from=builder /app/entrypoint.sh /entrypoint.sh
 
-CMD [ "echo", "amongus", ">", "/shared_data/flag.txt"]
+# Make the script executable
+RUN chmod +x /entrypoint.sh
+
+# Set Entrypoint to entrypoint script
+ENTRYPOINT ["/entrypoint.sh"]
