--- a/server/package.json
+++ b/server/package.json
@@ -21,10 +21,12 @@
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^1.9.1",
+    "@nestjs/axios": "^3.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "axios": "^1.5.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "googleapis": "^126.0.1",
