--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
     "handlebars": "^4.7.8",
     "nest": "^0.1.6",
     "nodemailer": "^6.9.5",
+    "pg-promise": "^11.5.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
