feat(db): take data give by the client and stock it into the db

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -10,6 +10,8 @@ COPY package*.json ./
 # Install the project's dependencies inside the container
 RUN npm install
 
+RUN yarn install
+
 # Copy the rest of the application to the container
 COPY . .
 
