--- a/client/web/package.json
+++ b/client/web/package.json
@@ -20,12 +20,14 @@
     "postcss": "^8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-modal": "^3.16.1",
     "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
     "@types/node": "20.7.0",
     "@types/react": "18.2.23",
     "@types/react-dom": "18.2.7",
+    "@types/react-modal": "^3.16.1",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.3",
     "typescript": "5.2.2"
