--- a/client/mobile/package.json
+++ b/client/mobile/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/stack": "^6.3.18",
+    "node.js": "^0.0.1-security",
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-gesture-handler": "^2.13.1",
