--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,10 @@ services:
     ports:
       - "8080:8080"
 
-  mobile: 
-    build: ./client/mobile
-    volumes:
-      - shared_cli_volume:/shared_data
+  # mobile: 
+  #   build: ./client/mobile
+  #   volumes:
+  #     - shared_cli_volume:/shared_data
 
   web:
     build: ./client/web
@@ -18,7 +18,7 @@ services:
       - shared_cli_volume:/shared_data
     depends_on:
       - server
-      - mobile
+      # - mobile
 
   keycloak:
     build: ./keycloak
