feat(mobile): fixed the development issues and moved source code to newely initialised project in order to work from a clean base

--- a/client/mobile/android/app/build.gradle
+++ b/client/mobile/android/app/build.gradle
@@ -73,9 +73,9 @@ android {
 
     compileSdkVersion rootProject.ext.compileSdkVersion
 
-    namespace "com.mobile"
+    namespace "com.awesomeproject"
     defaultConfig {
-        applicationId "com.mobile"
+        applicationId "com.awesomeproject"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
