fix(docker): fixed broken docker dependencies

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       - shared_cli_volume:/shared_data
     depends_on:
       - server
-      # - mobile
+      - mobile
 
   postgres:
     build: ./db
