feat(mobile): added interfaces and methods, implemented local abou.json management

--- a/client/mobile/android/app/build.gradle
+++ b/client/mobile/android/app/build.gradle
@@ -80,6 +80,10 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+        manifestPlaceholders = [
+            auth0Domain: "dev-i4fb32lnpthmvwbm.us.auth0.com",
+            auth0Scheme: "https"
+        ]
     }
     signingConfigs {
         debug {
