--- a/client/mobile/android/app/src/main/AndroidManifest.xml
+++ b/client/mobile/android/app/src/main/AndroidManifest.xml
@@ -19,6 +19,13 @@
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
+            <!-- <action android:name="android.intent.action.VIEW" />
+            <category android:name="android.intent.category.DEFAULT" />
+            <category android:name="android.intent.category.BROWSABLE" />
+            <data
+              android:host="dev-i4fb32lnpthmvwbm.us.auth0.com"
+              android:pathPrefix="/android/com.awesomeproject/callback"
+              android:scheme="com.awesomeproject.auth0" /> -->
         </intent-filter>
       </activity>
     </application>
