--- a/client/mobile/package.json
+++ b/client/mobile/package.json
@@ -18,6 +18,7 @@
     "node.js": "^0.0.1-security",
     "react": "18.2.0",
     "react-native": "0.72.5",
+    "react-native-auth0": "^3.0.2",
     "react-native-gesture-handler": "^2.13.1",
     "react-native-paper": "^5.10.6",
     "react-native-reanimated": "^3.5.4",
