feat(client): Made client.apk available on http://localhost:8081/client.apk

--- a/client/web/dockerfile
+++ b/client/web/dockerfile
@@ -1,9 +1,6 @@
 # Use the official Node.js image as a parent image
 FROM node:latest
 
-# Copy the package.json and package-lock.json (or yarn.lock if using yarn) to the container
-COPY package*.json ./
-
 WORKDIR /web/
 
 COPY . /web/
@@ -11,9 +8,14 @@ COPY . /web/
 # Install the project's dependencies inside the container
 RUN npm install
 
+# Build Next.js
 RUN npx next build
 
-# Make the container listen on port 3000 (default for Nest.js) at runtime
+# Copy APK to Next.js public folder (this assumes the APK is in /shared_data which is mounted as a volume)
+# This is commented out for now, uncomment if necessary.
+# COPY /shared_data/client.apk /web/public/client.apk
+
+# Make the container listen on port 3000 (default for Next.js) at runtime
 EXPOSE 3000
 
 # Specify the command to run when the container starts
