--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,14 +8,14 @@ services:
   mobile:
     build: ./client/mobile
     volumes:
-      - shared_cli_volume:/shared_data
+      - shared_cli_volume:/shared_data  # APK will be stored here
 
   web:
     build: ./client/web
     ports:
       - "8081:8081"
     volumes:
-      - shared_cli_volume:/shared_data
+      - shared_cli_volume:/web/public  # Copy APK to Next.js public folder
     depends_on:
       - server
       - mobile
@@ -32,6 +32,5 @@ services:
       - postgres_data:/var/lib/postgresql/data
 
 volumes:
-  shared_cli_volume: # Named volume for sharing app APK
-  keycloak_data:  # Named volume for Keycloak
-  postgres_data:  # Named volume for PostgreSQL
+  shared_cli_volume: 
+  postgres_data:
