fix(mobile): fixed login to add new user in DB and creates global state

--- a/client/mobile/android/app/build.gradle
+++ b/client/mobile/android/app/build.gradle
@@ -82,7 +82,7 @@ android {
         versionName "1.0"
         manifestPlaceholders = [
             auth0Domain: "dev-i4fb32lnpthmvwbm.us.auth0.com",
-            auth0Scheme: "https"
+            auth0Scheme: "${applicationId}.auth0"
         ]
     }
     signingConfigs {
