--- a/client/mobile/package.json
+++ b/client/mobile/package.json
@@ -15,16 +15,19 @@
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/stack": "^6.3.18",
+    "jwt-decode": "^4.0.0",
     "node.js": "^0.0.1-security",
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-auth0": "^3.0.2",
+    "react-native-base64": "^0.2.1",
     "react-native-gesture-handler": "^2.13.1",
     "react-native-paper": "^5.11.1",
     "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
-    "react-native-vector-icons": "^10.0.1"
+    "react-native-vector-icons": "^10.0.1",
+    "rn-secure-storage": "^2.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
