remove(meta): outward facing google API key

--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-CLIENT_ID=1003365867987-p6th64a1oaaraohh34ojbodbrp300451.apps.googleusercontent.com
-CLIENT_SECRET=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
-REFRESH_TOKEN=1//04KP74c3jXQ9VCgYIARAAGAQSNwF-L9IrAKGTOiSTr_nl-33BbFn1-rPDq08t8zuWfhVaNpPg8-5iChb_RwkJe4sU4NFBjPiVAzk
-EMAIL=nathanpaillet@gmail.com
+CLIENT_ID=
+CLIENT_SECRET=
+REFRESH_TOKEN=
+EMAIL=
